--- a/myinterview/pom.xml
+++ b/myinterview/pom.xml
@@ -54,7 +54,20 @@
         <artifactId>httpclient</artifactId>
         <version>4.5.14</version>
     </dependency>
+      <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-s3</artifactId>
+        <version>1.12.700</version>
+    </dependency>
+
+    <!-- Jackson Databind -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.17.0</version>
+    </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
@@ -108,5 +121,6 @@
       </plugin>
     </plugins>
   </reporting>
+  
 
 </project>
